<resources>
    <string name="app_name">GastoViagem</string>
    <string name="calculate">calcular</string>
    <string name="your_total_expense_will_be">Seu gasto total será de:</string>
    <string name="kms_by_liter">KMs por Litro</string>
    <string name="autonomy">Autonomia</string>
    <string name="price_by_liter">Preço por litro</string>
    <string name="price">Preço</string>
    <string name="total_kilometers">Total de quilômetros</string>
    <string name="distance">Distância</string>
    <string name="travel_cost">Custo de Viagem</string>
    <string name="total_value">R$ 0</string>

    <string name="fill_in_all_fields">Preencha todos os campos</string>
</resources>